--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgres://postgres@localhost:5432/go-test?sslmode=disable
+DATABASE_URL=postgres://root@localhost:5432/go-test?sslmode=disable
 JWT_SECRET=helloworld
